--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
